# happyrobot-inbound-carrier-agent

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.https.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260212_0001_init.py  20260213_0002_rebuild_calls_analytics.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py
backend/app/middleware/: api_key_middleware.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: __init__.py  call_repository.py  load_repository.py  negotiation_repository.py
backend/app/schemas/: __init__.py  call.py  dashboard.py  load.py  negotiation.py  verification.py
backend/app/services/: __init__.py  analytics_service.py  carrier_service.py  fmcsa_client.py  load_service.py  negotiation_service.py
backend/tests/: conftest.py  test_inbound_workflow.py  test_seed.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: dashboard-shell.tsx
frontend/components/charts/: decision-chart.tsx  funnel-chart.tsx  load-performance-chart.tsx  sentiment-chart.tsx  sentiment-distribution-chart.tsx
frontend/components/ui/: badge.tsx  (+1 more)
frontend/lib/: api.ts
infra/local/: Caddyfile
infra/railway/: redeploy.sh
scripts/: generate-local-cert.sh  railway-deploy.sh  run-backend-https.sh
(+5 files in other folders)
